bug fix - error alert z-index

--- a/components/Error/Error.module.css
+++ b/components/Error/Error.module.css
@@ -7,4 +7,5 @@
   position: fixed;
   left: 0;
   bottom: 100px;
+  z-index: 1000;
 }
